update: the last day

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="assets/styles/style.css" />
-    <script src="https://unpkg.com/phosphor-icons"></script>
+    <script defer src="https://unpkg.com/phosphor-icons"></script>
     <script defer src="assets/js/main.js"></script>
     <title>21 Days of Code</title>
   </head>
   <body>
     <header>
-      <i class="ph-horse-light logo"></i>
+      <a href="https://21-dias-de-codigo-rocketseat.vercel.app/"
+        ><i class="ph-horse-light logo"></i
+      ></a>
 
       <button class="mobile-toggle" aria-expanded="false">
         <i id="menu-icon" class="ph-list-light"></i>
@@ -30,6 +32,106 @@
         </ul>
       </nav>
     </header>
+    <section class="hero">
+      <div class="hero-info">
+        <h1>Olá! Eu sou Felipe Ferreira, sou desenvolvedor Font-End.</h1>
+        <h2>Trabalho com o desenvolvimento de websites, web-apps e mais.</h2>
+        <h2>Esta é uma apresentação dos #21diasdecodigo, desafio proposto pela Rocketseat e Jakeliny Graciely</h2>
+      </div>
+      <img src="https://github.com/felpfsf.png" alt="profile pic" />
+    </section>
+    <section class="about">
+      <div class="about-content">
+        <h2>Sobre Mim</h2>
+        <p>
+          Desde 2007 atuei como webdesigner em empresas e como freelancer,
+          desenvolvendo hot-sites para instituição de ensino, blogs e páginas de
+          apresentação para diversos clientes. Nesse mesmo ano ingressei na
+          faculdade de Ciência da Computação e Gestão em Sistemas de Informação
+          pela Uninove, concluindo em 2009 a formção de tecnologa Gestão em
+          Sistemas e 2010 o curso de Ciência da Computação.
+          <br /><br />
+          Quando estive como freelancer também trabalhei com design de cartões
+          de visitas digitais e físicos, bem como flyers, posters e materiais
+          gráficos, além disso tive um contato com o universo de animação
+          digital e produção 3D com Toon Boom, Maya, Blender e ZBrush. Foi uma
+          experiência interessante trabalhar com arte, adquiri novas habilidades
+          que preservo até hoje e pessoalmente foi muito bom ter contato com
+          pessoas e até mesmo uma cultura diferente.
+          <br /><br />
+          Me retirei da carreira em 2019 e hoje em 2022 busco uma recolocação no
+          mercado me especializando nas tecnologias atuais.
+        </p>
+      </div>
+    </section>
+    <section class="skills">
+      <div class="skills-content">
+        <h2>Habilidades</h2>
+        <div class="skills-cards">
+          <!-- Skill Card -->
+          <div class="skill-card">
+            <div class="skill-img">
+              <img
+                src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/css3/css3-original.svg"
+                alt=""
+              />
+            </div>
+            <h3 class="skill-tag">CSS</h3>
+          </div>
+          <!-- Skill Card -->
+          <div class="skill-card">
+            <div class="skill-img">
+              <img
+                src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/sass/sass-original.svg"
+                alt=""
+              />
+            </div>
+            <h3 class="skill-tag">SASS</h3>
+          </div>
+          <!-- Skill Card -->
+          <div class="skill-card">
+            <div class="skill-img">
+              <img
+                src="https://styled-components.com/logo.png"
+                alt=""
+              />
+            </div>
+            <h3 class="skill-tag">Styled Components</h3>
+          </div>
+          <!-- Skill Card -->
+          <div class="skill-card">
+            <div class="skill-img">
+              <img
+                src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/git/git-original.svg"
+                alt=""
+              />
+            </div>
+            <h3 class="skill-tag">Git</h3>
+          </div>
+          <!-- Skill Card -->
+          <div class="skill-card">
+            <div class="skill-img">
+              <img
+                src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/javascript/javascript-plain.svg"
+                alt=""
+              />
+            </div>
+            <h3 class="skill-tag">JavaScript</h3>
+          </div>
+          <!-- Skill Card -->
+          <div class="skill-card">
+            <div class="skill-img">
+              <img
+                src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/react/react-original.svg"
+                alt=""
+              />
+            </div>
+            <h3 class="skill-tag">React</h3>
+          </div>
+          <!-- Fim Cards -->
+        </div>
+      </div>
+    </section>
     <section class="main">
       <div class="content">
         <h1>21 days of Code</h1>
@@ -332,6 +434,21 @@
             >
             <a
               href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-20-emoji-picker"
+              target="_blank"
+              >Repo</a
+            >
+          </div>
+        </div>
+        <div class="card">
+          <h1>Day #21</h1>
+          <h2>Is this the End ...</h2>
+          <p>Or is it just the beggining? The last day is to create the portfolio and tell about yourself, your exp and show all the 20 days of code.</p>
+          <div class="footer-card">
+            <a href="/" target="_blank"
+              >Deploy</a
+            >
+            <a
+              href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/"
               target="_blank"
               >Repo</a
             >
