update: styling mobile

--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
         </div>
       </div>
     </section>
-    <section class="main">
-      <div class="content">
+    <section class="projects">
+      <div class="projects-content">
         <h1>21 days of Code</h1>
         <h2>
           This is the landing page of the #21diasdecodigo, an event promoted by
@@ -444,7 +444,7 @@
           <h2>Is this the End ...</h2>
           <p>Or is it just the beggining? The last day is to create the portfolio and tell about yourself, your exp and show all the 20 days of code.</p>
           <div class="footer-card">
-            <a href="/" target="_blank"
+            <a href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/" target="_blank"
               >Deploy</a
             >
             <a
