update: styling mobile

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="hero-info">
         <h1>Olá! Eu sou Felipe Ferreira, sou desenvolvedor Font-End.</h1>
         <h2>Trabalho com o desenvolvimento de websites, web-apps e mais.</h2>
-        <h2>Esta é uma apresentação dos #21diasdecodigo, desafio proposto pela Rocketseat e Jakeliny Graciely</h2>
+        <h2>Esta é uma apresentação dos <strong>#21diasdecodigo</strong>, desafio proposto pela <a href="https://www.rocketseat.com.br/" target="_blank" rel="noopener noreferrer"> Rocketseat</a> e <a href="https://www.twitch.tv/jakeliny" target="_blank" rel="noopener noreferrer">Jakeliny Gracielly</a></h2>
       </div>
       <img src="https://github.com/felpfsf.png" alt="profile pic" />
     </section>
@@ -134,11 +134,11 @@
     </section>
     <section class="projects">
       <div class="projects-content">
-        <h1>21 days of Code</h1>
-        <h2>
+        <h2>Projetos</h2>
+        <h3>
           This is the landing page of the #21diasdecodigo, an event promoted by
           Rocketseat.
-        </h2>
+        </h3>
       </div>
       <div class="cards">
         <div class="card">
