refac: class names

--- a/index.html
+++ b/index.html
@@ -477,8 +477,8 @@
     </section>
     <section id="contact" class="section-wrapper">
       <div class="content-wrapper">
-        <h2>Contato</h2>
-        <h3>Entre em contato comigo nas redes sociais</h3>
+        <h2 class="contact-title">Contato</h2>
+        <h3 class="contact-info">Entre em contato comigo nas redes sociais</h3>
 
         <div class="social">
           <ul class="social-links">
