feat: scroll to the top button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>21 Days of Code</title>
   </head>
   <body>
-    <header>
+    <header id="home">
       <a href="https://21-dias-de-codigo-rocketseat.vercel.app/"
         ><i class="ph-horse-light logo"></i
       ></a>
@@ -482,20 +482,40 @@
 
         <div class="social">
           <ul class="social-links">
-            <li><a href="https://www.linkedin.com/in/felipefsf/"><i class="ph-linkedin-logo"></i></a></li>
-            <li><a href="https://github.com/felpfsf"><i class="ph-github-logo"></i></a></li>
-            <li><a href="https://www.instagram.com/fs.ferreira/?theme=dark"><i class="ph-instagram-logo"></i></a></li>
-            <li><a href="https://twitter.com/felpfsf_dev"><i class="ph-twitter-logo"></i></a></li>
+            <li>
+              <a href="https://www.linkedin.com/in/felipefsf/"
+                ><i class="ph-linkedin-logo"></i
+              ></a>
+            </li>
+            <li>
+              <a href="https://github.com/felpfsf"
+                ><i class="ph-github-logo"></i
+              ></a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/fs.ferreira/?theme=dark"
+                ><i class="ph-instagram-logo"></i
+              ></a>
+            </li>
+            <li>
+              <a href="https://twitter.com/felpfsf_dev"
+                ><i class="ph-twitter-logo"></i
+              ></a>
+            </li>
           </ul>
         </div>
       </div>
     </section>
     <footer class="section-wrapper">
       <div class="content-wrapper footer-content">
-        <h2>Desenvolvido com 💜 por <a href="https://www.linkedin.com/in/felipefsf/">Felipe Ferreira</a>
+        <h2>
+          Desenvolvido com 💜 por
+          <a href="https://www.linkedin.com/in/felipefsf/">Felipe Ferreira</a>
           <h3>Todos os direitos reservados - 2022</h3>
         </h2>
       </div>
     </footer>
+    <!-- Scroll to the top button -->
+    <a id="btnScrollToTheTop" class="scroll-top-btn" href="#home" ><i class="ph-caret-circle-up"></i></a>
   </body>
 </html>
