refac: local profile photo

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           >
         </h2>
       </div>
-      <img src="https://github.com/felpfsf.png" alt="profile pic" />
+      <img src="assets/images/felpfsf.jpg" alt="profile pic" />
     </section>
     <section id="about" class="glass-bg section-wrapper">
       <div class="content-wrapper">
