--- a/index.html
+++ b/index.html
@@ -61,23 +61,11 @@
       <div class="content-wrapper">
         <h2 class="about-title">Sobre Mim</h2>
         <p class="about-info">
-          Desde 2007 atuei como webdesigner em empresas e como freelancer,
-          desenvolvendo hot-sites para instituição de ensino, blogs e páginas de
-          apresentação para diversos clientes. Nesse mesmo ano ingressei na
-          faculdade de Ciência da Computação e Gestão em Sistemas de Informação
-          pela Uninove, concluindo em 2009 a formção de tecnologa Gestão em
-          Sistemas e 2010 o curso de Ciência da Computação.
+          Eu sou um tecnólogo em Gestão em Sistemas de Informação e Ciência da Computação. Eu fiz uma transição de carreira para o desenvolvimento web.
           <br /><br />
-          Quando estive como freelancer também trabalhei com design de cartões
-          de visitas digitais e físicos, bem como flyers, posters e materiais
-          gráficos, além disso tive um contato com o universo de animação
-          digital e produção 3D com Toon Boom, Maya, Blender e ZBrush. Foi uma
-          experiência interessante trabalhar com arte, adquiri novas habilidades
-          que preservo até hoje e pessoalmente foi muito bom ter contato com
-          pessoas e até mesmo uma cultura diferente.
+          Eu tenho 3 anos de experiência como web designer e mais de 10 anos trabalhando como designer gráfico em animação digital, produção 3D e materiais gráficos.
           <br /><br />
-          Me retirei da carreira em 2019 e hoje em 2022 busco uma recolocação no
-          mercado me especializando nas tecnologias atuais.
+          Atualmente trabalho como desenvolver fullstack na TBDC Agro Software e também realizo projetos freelancers focado em Node, Typescript, React e Vue e frameworks de CSS como Tailwind, Styled Components e pre-processadores SASS. Sempre praticando e aprendendo continuamente, no futuro, alinhado ao conhecimento quero me especializar em frontend e desenvolvedor mobile.
         </p>
       </div>
     </section>
