--- a/index.html
+++ b/index.html
@@ -61,11 +61,29 @@
       <div class="content-wrapper">
         <h2 class="about-title">Sobre Mim</h2>
         <p class="about-info">
-          Eu sou um tecnólogo em Gestão em Sistemas de Informação e Ciência da Computação. Eu fiz uma transição de carreira para o desenvolvimento web.
+          Desenvolvedor Fullstack com sólida formação em Gestão em Sistemas de
+          Informação e Ciência da Computação, além de experiência anterior como
+          designer gráfico e web designer. Fiz uma transição de carreira
+          bem-sucedida para o desenvolvimento web.
           <br /><br />
-          Eu tenho 3 anos de experiência como web designer e mais de 10 anos trabalhando como designer gráfico em animação digital, produção 3D e materiais gráficos.
+
+          Atualmente, colaboro no desenvolvimento de um produto exclusivo,
+          utilizando frameworks como Vue.js no frontend e Node.js com Express no
+          backend. Aplico a arquitetura MVVM para garantir uma base robusta no
+          frontend e sigo os princípios da Clean Architecture no backend. Também
+          sou responsável pelo monitoramento eficiente do sistema através do
+          Zabbix.
           <br /><br />
-          Atualmente trabalho como desenvolver fullstack na TBDC Agro Software e também realizo projetos freelancers focado em Node, Typescript, React e Vue e frameworks de CSS como Tailwind, Styled Components e pre-processadores SASS. Sempre praticando e aprendendo continuamente, no futuro, alinhado ao conhecimento quero me especializar em frontend e desenvolvedor mobile.
+
+          Tenho experiência com diversas ferramentas e tecnologias, incluindo
+          Node.js, Typescript, React, Vue e frameworks de CSS como Tailwind,
+          Styled Components e SASS.
+          <br /><br />
+
+          Minha abordagem centrada na colaboração e minha dedicação ao
+          aprendizado contínuo me permitem contribuir efetivamente para o
+          sucesso dos projetos. Estou focado em me especializar em frontend e
+          desenvolvimento mobile no futuro.
         </p>
       </div>
     </section>
@@ -504,6 +522,8 @@
       </div>
     </footer>
     <!-- Scroll to the top button -->
-    <a id="btnScrollToTheTop" class="scroll-top-btn" href="#home" ><i class="ph-caret-circle-up"></i></a>
+    <a id="btnScrollToTheTop" class="scroll-top-btn" href="#home"
+      ><i class="ph-caret-circle-up"></i
+    ></a>
   </body>
 </html>
